2019-08-23  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Imports): add tinytest,
        remove RUnit

2019-06-04  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Suggests): add RUnit

2019-05-01  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-11

        * R/functions.R (here): explicitly close text
        connection (which otherwise would be
        garbage-collected anyway)

2019-03-27  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (HTMLencode): new argument
        'use.iconv': if TRUE, use 'iconv' to convert
        input to UTF-8 encoded string

2019-03-21  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (HTMLencode): fix regular
        expression (reported by Jacqueline Nolis)

2019-02-18  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (here): add function (moved
        from package 'esutils')

2019-01-18  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (dctable): add function (still
        incomplete)

2018-12-14  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-10

        * R/functions.R (toLatex.data.frame): new
        argument eol, with default "\\\\"

        * man/toLatex.data.frame.Rd: add man page

2017-08-16  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-9

2018-06-22  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (URL): add URL
        (Maintainer): add ORCID

2018-06-15  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (title_case): export function

2018-06-14  Enrico Schumann  <es@enricoschumann.net>

        * man/*: update documentation

2018-03-09  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (TeXencode): add function

2018-02-28  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (fill_in): new argument
        'replace.NA'; if TRUE (the default), NA values