@@ -1,3 +1,8 @@
+2019-11-13  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/functions.R (here): fixed -- argument
+        'trim' was ignored for character vectors
+
 2019-08-23  Enrico Schumann  <es@enricoschumann.net>
 
         * DESCRIPTION (Imports): add tinytest,
